Dyntopo finding non-existent vertex data #100957

Closed
opened 2022-09-10 07:31:52 +02:00 by Ovionis · 14 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-07 19:33, hash: 0a32f6b76a

Short description of error
In sculpt mode, if you click the checkbox for Dyntopo, you will be given a warning about it not preserving certain vertex data, which you then have to click Ok to ignore.
If you leave sculpt mode with Dyntopo enabled, then you enter sculpt mode again for the object, Dyntopo will be disabled again with a warning in the status bar telling you vertex data was found so it disabled Dyntopo.

This happens despite the mesh not having any vertex data. No Vertex Data/UVs/Materials/Attributes/etc
Add any new mesh object, and disable or delete the UVs to get what's supposed to be a clean mesh.

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-07 19:33, hash: `0a32f6b76a` **Short description of error** In sculpt mode, if you click the checkbox for Dyntopo, you will be given a warning about it not preserving certain vertex data, which you then have to click Ok to ignore. If you leave sculpt mode with Dyntopo enabled, then you enter sculpt mode again for the object, Dyntopo will be disabled again with a warning in the status bar telling you vertex data was found so it disabled Dyntopo. This happens despite the mesh not having any vertex data. No Vertex Data/UVs/Materials/Attributes/etc Add any new mesh object, and disable or delete the UVs to get what's supposed to be a clean mesh.
Author

Added subscriber: @Phigon

Added subscriber: @Phigon

#103891 was marked as duplicate of this issue

#103891 was marked as duplicate of this issue

#102852 was marked as duplicate of this issue

#102852 was marked as duplicate of this issue

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

It seems there is a custom data layer of type bool that goes by the name of .hide_vert. But I am not sure how it should be handled, maybe a special warning could be added for this particular layer. Tagging the module for more information.

It seems there is a custom data layer of type bool that goes by the name of `.hide_vert`. But I am not sure how it should be handled, maybe a special warning could be added for this particular layer. Tagging the module for more information.
Member

Added subscribers: @HooglyBoogly, @JulienKaspar

Added subscribers: @HooglyBoogly, @JulienKaspar
Member

@HooglyBoogly You have more information on this?

@HooglyBoogly You have more information on this?
Member

After D15937, this will only happen when part of the mesh is hidden at least. But it probably makes sense to disable the warning for the hide attributes in particular.

After [D15937](https://archive.blender.org/developer/D15937), this will only happen when part of the mesh is hidden at least. But it probably makes sense to disable the warning for the hide attributes in particular.
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Added subscribers: @Tolkfan, @mano-wii

Added subscribers: @Tolkfan, @mano-wii
Member

Added subscribers: @CACorwin, @PratikPB2123

Added subscribers: @CACorwin, @PratikPB2123
Hans Goudey self-assigned this 2023-01-16 06:05:55 +01:00
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:11:12 +01:00
Member

This is fixed with #104567. I will close the issue now.

This is fixed with #104567. I will close the issue now.
Julien Kaspar added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-10 15:12:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100957
No description provided.